<resources>
    <string name="app_name">Travel Memories</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Marian ILEANA</string>
    <string name="nav_header_subtitle">marianileana@email.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_about_us">About Us</string>
    <string name="menu_contactus">Contact Us</string>
    <string name="menu_share">Share</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>

    <string name="name_label">Name:</string>
    <string name="email_label">Email:</string>
    <string name="message_label">Message:</string>
    <string name="submit_button">Submit</string>

    <string name="app_description">Travel Memories is an engaging application that allows you to capture and preserve your most beautiful travel memories. Capture photos, write down and save special moments, favorite destinations, and unique experiences in one place. Review and share memories with friends and family. Enjoy every detail and keep the adventure of your travels alive with Travel Memories.</string>

    <string name="theme_title">Theme</string>
    <string name="dark_theme_summary">Dark theme</string>
    <string name="light_theme_summary">Light theme</string>
    <string name="language_title">Language</string>

    <string name="send_feedback">Send Feedback</string>
    <string name="no_email_client">No email client found</string>
</resources>